--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
         "cordova-custom-config": "5.0.2",
         "cordova-plugin-splashscreen": "5.0.1",
         "cordova-plugin-whitelist": "1.3.3",
-        "monaca-plugin-monaca-core": "3.2.1"
+        "monaca-plugin-monaca-core": "3.2.1",
+        "cordova-plugin-geolocation": "4.0.1",
+        "cordova-plugin-network-information": "2.0.1",
+        "cordova-plugin-vibration": "2.1.6",
+        "cordova-plugin-dialogs": "2.0.1"
     },
     "cordova": {
         "plugins": {
             "cordova-custom-config": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "monaca-plugin-monaca-core": {}
+            "monaca-plugin-monaca-core": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-vibration": {},
+            "cordova-plugin-dialogs": {}
         }
     },
     "scripts": {
